<resources>
    <string name="app_name">Proximity Push-Up Counter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start_menu">StartMenu</string>
    <string name="title_activity_saves">Saves</string>
    <string name="title_activity_loading_screen">LoadingScreen</string>
    <string name="title_activity_graph">Graph</string>
    <string name="banner_ad_unit_id">ca-app-pub-1876787092384518/3922939982</string>
    <string name="banner_add_unit_id_startMenu">ca-app-pub-1876787092384518/3026459580</string>


    <string name="shortLabelStart">Start Tracker</string>
    <string name="longLabelStart">Start Tracker</string>
    <string name="disabledLabelStart">Disabled</string>

    <string name="shortLabelLog">Log</string>
    <string name="longLabelLog">Log</string>
    <string name="disabledLabelLog">Disabled</string>
    <string name="change_name">Change Name</string>
    <string name="notification_description">This is your daily reminder</string>
    <string name="notification_title">Do Push-Ups!</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="log">Log</string>
    <string name="settings">Settings</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="save">Save</string>
    <string name="vibrate">Vibrate</string>
    <string name="sound">Sound</string>
    <string name="tracker_suggestion">Note: it is recommended to place phone under chest</string>
    <string name="tracker_instruction">Place phone face up under face to use proximity sensor or tap screen to increment</string>
    <string name="reset">Reset</string>
    <string name="home">Home</string>
    <string name="speed_up_encouragement">Speed Up Encouragement</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="voice_feedback">Voice Feedback</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statistics">Statistics</string>
    <string name="decrease">Decrease</string>
    <string name="your_best">Your Best</string>
    <string name="session">Individual Session</string>
    <string name="day">Day</string>
    <string name="completed_today">Completed Today</string>
    <string name="all_time_total">All-time Total</string>
    <string name="pushups">Pushups</string>
    <string name="goal_completion">Goal Completion</string>
    <string name="reached">Reached</string>
    <string name="failed">Failed</string>
    <string name="pushup_count">Pushup Count</string>
</resources>
