<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.TrackerActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/countDisplay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="countUpButtonPressed"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="216sp"
        ads:layout_constraintBottom_toTopOf="@+id/constraint_actions"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_actions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_square"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.0"
        ads:layout_constraintStart_toStartOf="parent">


        <Switch
            android:id="@+id/vibrateSwitch"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:checked="true"
            android:text="@string/vibrate"
            ads:layout_constraintBottom_toTopOf="@+id/soundSwitch"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <Switch
            android:id="@+id/soundSwitch"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:checked="true"
            android:text="@string/sound"
            ads:layout_constraintBottom_toTopOf="@+id/button_save"
            ads:layout_constraintEnd_toEndOf="@+id/vibrateSwitch"
            ads:layout_constraintTop_toBottomOf="@+id/vibrateSwitch"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background_blue"
            android:drawableLeft="@drawable/ic_refresh"
            android:drawableTint="@color/white"
            android:onClick="refreshButtonPressed"
            android:paddingLeft="8dp"
            android:text="Reset"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            ads:layout_constraintBottom_toTopOf="@+id/button_save"
            ads:layout_constraintStart_toStartOf="@+id/button_decrease"
            ads:layout_constraintTop_toBottomOf="@+id/button_decrease"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <Button
            android:id="@+id/button_decrease"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background_blue"
            android:drawableLeft="@drawable/ic_arrow_down"
            android:drawableTint="@android:color/white"
            android:onClick="decreaseButtonClicked"
            android:paddingLeft="8dp"
            android:text="@string/decrease"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            ads:layout_constraintBottom_toTopOf="@+id/button_reset"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_background_blue"
            android:onClick="savedButtonClicked"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            ads:layout_constraintBottom_toTopOf="@+id/adView"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/tracker_instruction"
            android:textAlignment="center"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"></com.google.android.gms.ads.AdView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
