<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/your_best"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/session"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/text_best_session"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/day"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/text_best_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/pushup_count"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:text="@string/completed_today"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/text_completed_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/all_time_total"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/text_all_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/goal_completion"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:drawableEnd="@drawable/ic_success"
        android:gravity="center"
        android:text="@string/reached"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/text_goal_reached"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:drawableEnd="@drawable/ic_failure"
        android:gravity="center"
        android:text="@string/failed"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/text_goal_failed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--<LinearLayout-->
    <!--android:visibility="gone"-->
    <!--android:id="@+id/linearLayout"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_margin="4dp"-->
    <!--android:orientation="horizontal"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent">-->

    <!--<androidx.cardview.widget.CardView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_weight="1"-->
    <!--android:layout_margin="4dp">-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:orientation="vertical"-->
    <!--android:padding="8dp">-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_weight="1"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:text="High Score"-->
    <!--android:textSize="20sp"-->
    <!--android:textStyle="bold" />-->

    <!--<TextView-->
    <!--android:id="@+id/text_high_score"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_weight="1"-->
    <!--android:gravity="bottom"-->
    <!--android:text="0"-->
    <!--android:textSize="16sp" />-->

    <!--</LinearLayout>-->
    <!--</androidx.cardview.widget.CardView>-->

    <!--<androidx.cardview.widget.CardView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_margin="4dp"-->
    <!--android:layout_weight="1">-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:orientation="vertical"-->
    <!--android:padding="8dp">-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:text="Day High Score"-->
    <!--android:textSize="20sp"-->
    <!--android:textStyle="bold" />-->

    <!--<TextView-->
    <!--android:id="@+id/text_day_high_score"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="bottom"-->
    <!--android:text="0"-->
    <!--android:textSize="16sp" />-->
    <!--</LinearLayout>-->
    <!--</androidx.cardview.widget.CardView>-->
    <!--</LinearLayout>-->

    <!--<androidx.cardview.widget.CardView-->
    <!--android:visibility="gone"-->
    <!--android:id="@+id/cardView3"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:layout_weight="1"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@id/cardView2">-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:orientation="vertical"-->
    <!--android:padding="8dp">-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:text="Total Pushups"-->
    <!--android:textSize="20sp"-->
    <!--android:textStyle="bold" />-->

    <!--<TextView-->
    <!--android:id="@+id/text_total_pushups"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="0"-->
    <!--android:textSize="16sp" />-->

    <!--</LinearLayout>-->

    <!--</androidx.cardview.widget.CardView>-->

    <!--<LinearLayout-->
    <!--android:id="@+id/linearLayout2"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="104dp"-->
    <!--android:layout_margin="4dp"-->
    <!--android:visibility="gone"-->
    <!--android:layout_marginTop="8dp"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="1.0"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/cardView3">-->

    <!--<androidx.cardview.widget.CardView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_margin="4dp"-->
    <!--android:layout_weight="1">-->

    <!--<LinearLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:gravity="center"-->
    <!--android:orientation="vertical"-->
    <!--android:padding="8dp">-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Goal Reached"-->
    <!--android:textSize="20sp"-->
    <!--android:textStyle="bold" />-->

    <!--<ImageView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--app:srcCompat="@drawable/ic_success" />-->

    <!--<TextView-->
    <!--android:id="@+id/text_goal_reached"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="0"-->
    <!--android:textSize="16sp" />-->
    <!--</LinearLayout>-->
    <!--</androidx.cardview.widget.CardView>-->

    <!--<androidx.cardview.widget.CardView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_margin="4dp"-->
    <!--android:layout_weight="1">-->

    <!--<LinearLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:gravity="center"-->
    <!--android:orientation="vertical"-->
    <!--android:padding="8dp">-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Goal Failed"-->
    <!--android:textSize="20sp"-->
    <!--android:textStyle="bold" />-->

    <!--<ImageView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--app:srcCompat="@drawable/ic_failure" />-->

    <!--<TextView-->
    <!--android:id="@+id/text_goal_failed"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="0"-->
    <!--android:textSize="16sp" />-->
    <!--</LinearLayout>-->
    <!--</androidx.cardview.widget.CardView>-->
    <!--</LinearLayout>-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16">

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <!--<androidx.cardview.widget.CardView-->
    <!--android:id="@+id/cardView2"-->
    <!--android:visibility="gone"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_margin="8dp"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:layout_marginTop="8dp"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="0.0"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/linearLayout">-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:orientation="vertical"-->
    <!--android:padding="8dp">-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_weight="1"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:text="Pushups Done Today"-->
    <!--android:textSize="20sp"-->
    <!--android:textStyle="bold" />-->

    <!--<TextView-->
    <!--android:id="@+id/text_total_day_pushups"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_weight="1"-->
    <!--android:gravity="bottom"-->
    <!--android:text="0"-->
    <!--android:textSize="16sp" />-->

    <!--</LinearLayout>-->
    <!--</androidx.cardview.widget.CardView>-->
</androidx.constraintlayout.widget.ConstraintLayout>
